# faster-whisper-server

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
faster_whisper_server/: api.py  cli.py  config.py  models.py
