[project]
name = "faster-whisper-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.110.0",
	"uvicorn[standard]>=0.29.0",
	"python-multipart>=0.0.9",
	"pyyaml>=6.0.1",
	"faster-whisper>=1.2.1",
]

[project.scripts]
faster-whisper-server = "faster_whisper_server.cli:main"

[project.optional-dependencies]
dev = [
	"pre-commit>=3.7.1",
	"ruff>=0.6.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
